overlapping title with favorite icon fixed

--- a/src/app/components/moviedetails/moviedetails.css
+++ b/src/app/components/moviedetails/moviedetails.css
@@ -57,6 +57,7 @@
 }
 
 .movie-title {
+  padding-right: 50px;
   font-size: 2rem;
   margin-bottom: 8px;
 }
